Test selective release for php8.1.

--- a/laravel-php/8.1/fpm/Dockerfile
+++ b/laravel-php/8.1/fpm/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y libpq-dev
 RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
 RUN docker-php-ext-install pdo pdo_pgsql
 
+# install redis
 RUN mkdir -p /usr/src/php/ext/redis \
     && curl -fsSL https://pecl.php.net/get/redis | tar xvz -C "/usr/src/php/ext/redis" --strip 1 \
     && docker-php-ext-install redis
