Add PHP zip support

--- a/laravel-php/8.1/fpm/Dockerfile
+++ b/laravel-php/8.1/fpm/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:8.1.0-fpm
-RUN apt-get update && apt-get install -y libpq-dev
+RUN apt-get update && apt-get install -y libpq-dev zip unzip zlib1g-dev libzip-dev
 
 RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
 RUN docker-php-ext-install pdo pdo_pgsql
@@ -8,6 +8,8 @@ RUN docker-php-ext-install pdo pdo_pgsql
 RUN mkdir -p /usr/src/php/ext/redis \
     && curl -fsSL https://pecl.php.net/get/redis | tar xvz -C "/usr/src/php/ext/redis" --strip 1 \
     && docker-php-ext-install redis
+
+RUN docker-php-ext-install zip
 
 COPY start.sh /usr/local/bin/start
 
