--- a/.github/workflows/master-deploy-laravel-php.yml
+++ b/.github/workflows/master-deploy-laravel-php.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: laravel-php
+  IMAGE_NAME: ${{ github.repository }}-laravel-php
 
 jobs:
   build-and-push-image:
