--- a/laravel-nginx/alpine/nginx.conf
+++ b/laravel-nginx/alpine/nginx.conf
@@ -10,6 +10,10 @@ events {
 }
 
 
+upstream php-fpm {
+    server unix:/run/php-fpm/php-fpm.sock;
+}
+
 http {
     include mime.types;
     server {
@@ -34,7 +38,7 @@ http {
         location = /robots.txt  { access_log off; log_not_found off; }
         location ~ \.php$ {
             try_files $uri /index.php =404;
-            fastcgi_pass php-fpm:9000;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_index index.php;
             fastcgi_param REQUEST_METHOD $request_method;
